--- a/shippable.yml
+++ b/shippable.yml
@@ -3,9 +3,8 @@
 # language setting
     language: python
 # version numbers
-    python:
+  python:
    - "2.7"
    - "3.2"
    - "3.3"
-# command to run tests
-    script: python test.py
+   - "pypy"
